--- a/action.yml
+++ b/action.yml
@@ -1,62 +1,62 @@
-name: 'Trellis Deploy'
+name: "Trellis Deploy"
 description: |
   Deploy Trellis, Bedrock and Sage(optional) via Github Actions
 branding:
-  icon: 'upload-cloud'  
-  color: 'blue'
+  icon: "upload-cloud"
+  color: "blue"
 inputs:
-    role_file:
-      description: galaxy role file containing a list of roles to be imported
-      default: "galaxy.yml"
-      required: false
-    vault_password:
-      description: ansible vault password
-      default: false
-      required: false
-    vault_password_file:
-      description: ansible vault password file to use. Must be the same one in ansible.cfg(if applicable)
-      default: .vault_pass
-      required: false
-    site_env:
-      description: the environment to deploy to (staging, production, etc)
-      required: true
-    site_name:
-      description: the WordPress site to deploy (name defined in wordpress_sites)
-      required: false
-    site_key:
-      description: Search the WordPress site by key == value
-      required: false
-    site_value:
-      description: Search the WordPress site by key == value
-      required: false
-    site_path:
-      description: Path where site lives
-      default: ${{ github.workspace }}
-      required: false
-    trellis_path:
-      description: Path where trellis lives
-      default: ${{ github.workspace }}/trellis
-      required: false
-    group_vars:
-      description: Group vars where sites are defined.
-      default: false #defaults to `group_vars/${site_env}/wordpress_sites.yml` in js
-      required: false
-    verbose: 
-      default: false
-      required: false
-    ansible_strategy: 
-      description: Ansible strategy to use, supports mitogen.
-      default: linear
-      required: false
-    yarn_cache:
-      description: Yarn cache path, used for caching the cache.
-      default: ${{ github.workspace }}/.cache/yarn
-      required: false
+  role_file:
+    description: galaxy role file containing a list of roles to be imported
+    default: "galaxy.yml"
+    required: false
+  vault_password:
+    description: ansible vault password
+    default: false
+    required: false
+  vault_password_file:
+    description: ansible vault password file to use. Must be the same one in ansible.cfg(if applicable)
+    default: .vault_pass
+    required: false
+  site_env:
+    description: the environment to deploy to (staging, production, etc)
+    required: true
+  site_name:
+    description: the WordPress site to deploy (name defined in wordpress_sites)
+    required: false
+  site_key:
+    description: Search the WordPress site by key == value
+    required: false
+  site_value:
+    description: Search the WordPress site by key == value
+    required: false
+  site_path:
+    description: Path where site lives
+    default: ${{ github.workspace }}
+    required: false
+  trellis_path:
+    description: Path where trellis lives
+    default: ${{ github.workspace }}/trellis
+    required: false
+  group_vars:
+    description: Group vars where sites are defined.
+    default: false #defaults to `group_vars/${site_env}/wordpress_sites.yml` in js
+    required: false
+  verbose:
+    default: false
+    required: false
+  ansible_strategy:
+    description: Ansible strategy to use, supports mitogen.
+    default: linear
+    required: false
+  yarn_cache:
+    description: Yarn cache path, used for caching the cache.
+    default: ${{ github.workspace }}/.cache/yarn
+    required: false
 runs:
-  using: 'docker'
-  image: 'docker://steenbergendesign/github-action-trellis:latest'
+  using: "docker"
+  image: "docker://steenbergendesign/github-action-trellis:latest"
   env:
     ANSIBLE_HOST_KEY_CHECKING: false
     ANSIBLE_STRATEGY_PLUGINS: /usr/lib/python3.6/site-packages/ansible_mitogen/plugins/strategy
-    ANSIBLE_STRATEGY:  ${{ inputs.ansible_strategy }}
+    ANSIBLE_STRATEGY: ${{ inputs.ansible_strategy }}
     YARN_CACHE_FOLDER: ${{ inputs.yarn_cache }}
