--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@actions/core": "^1.1.0",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "^0.33.3",
     "js-yaml": "^3.13.1"
   }
 }
