--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "steenbergendesign-action-trellis",
+  "name": "jeffbyrnes-action-trellis",
   "repository": "",
   "description": "GitHub Action to deploy to trellis environmnet",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "main": "index.js",
-  "author": "Steenbergen Design <arjan@steenbergen.design>",
+  "author": "Jeff Byrnes <thejeffbyrnes@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@actions/core": "^1.1.0",
