--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Thomas Goergel <thom.georgel@gmail.com>, Jeff Byrnes <thejeffbyrnes@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@actions/core": "^1.1.0",
+    "@actions/core": "^1.10.0",
+    "@actions/exec": "^1.1.1",
     "@vercel/ncc": "^0.33.3",
     "js-yaml": "^3.13.1"
   }
