--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tgeorgel-action-trellis",
-  "repository": "",
+  "repository": "tgeorgel/trellis-action",
   "description": "GitHub Action to deploy to trellis environment",
-  "version": "1.1.2",
+  "version": "1.3.0",
   "main": "index.js",
   "author": "Thomas Goergel <thom.georgel@gmail.com>, Jeff Byrnes <thejeffbyrnes@gmail.com>",
   "license": "MIT",
