:bug: Fix syntax error

--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -27,7 +27,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to GHCR
+      - name: Map Node -> Alpine
+        id: map
+        run: |
+          case "${{ matrix.node_version }}" in
+            18*) echo "ALPINE_VERSION=3.18" >> $GITHUB_ENV ;;
+            20*) echo "ALPINE_VERSION=3.19" >> $GITHUB_ENV ;;
+            22*) echo "ALPINE_VERSION=3.20" >> $GITHUB_ENV ;;
+            *) echo "ALPINE_VERSION=3.19" >> $GITHUB_ENV ;; # default
+          esac
+          # Extract major Node version
+          NODE_MAJOR=$(echo ${{ matrix.node_version }} | cut -d. -f1)
+          echo "NODE_MAJOR=$NODE_MAJOR" >> $GITHUB_ENV
+
+      - name: Log in to GitHub Container Registry
         # uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         uses: docker/login-action@v3
         with:
@@ -35,16 +48,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and Push Docker Image
+      - name: Build & push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           build-args: |
             NODE_VERSION=${{ matrix.node_version }}
+            ALPINE_VERSION=${{ env.ALPINE_VERSION }}
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-node${{ matrix.node_version%%.* }}
-
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-node${{ env.NODE_MAJOR }}
 
       # - name: Extract metadata (tags, labels) for Docker
       #   id: meta
